# House_IoT

./: .gitignore  CMakeLists.txt  README.md
documentation/: IO-configurations.json
project/lib/crossguid/src/: guid.cpp
project/src/: main.cpp
project/src/common/: baseRoute.h  serverUtils.h
project/src/configuration/: mqttServerConfiguration.cpp  mqttServerConfiguration.h  serverConfiguration.cpp  serverConfiguration.h
project/src/data/: automaticDoorLockSettings.json  automaticLightsUserSettings.json  curtainsUserSettings.json  dataPaths.h  morningAlarmSettings.json  secretDoorUserSettings.json  windowsUserSettings.json
project/src/handlers/: automaticDoorLockHandler.cpp  automaticLightsHandler.cpp  curtainsHandler.cpp  morningAlarmHandler.cpp  secretDoorHandler.cpp  testConnectionHandler.cpp  windowsHandler.cpp
project/src/handlers/headers/: automaticDoorLockHandler.h  automaticLightsHandler.h  curtainsHandler.h  morningAlarmHandler.h  secretDoorHandler.h  testConnectionHandler.h  windowsHandler.h
project/src/models/: automaticDoorLockModel.h  automaticLightsModel.h  curtainsModel.h  morningAlarmModel.h  secretDoorModel.h  windowsModel.h
